# steermomo.github.io

./: .gitignore  .travis.yml  404.html  CNAME  Makefile  README.md  about.html  index.html  pelicanconf.py  poetry_export.sh  publishconf.py  pyproject.toml  requirements.txt  sitemap.xml  tasks.py
.github/workflows/: blog-ci.yml
archives/: index.html
author/: h-li.html  h-li2.html  h-li5.html
blog/: index.html  index2.html  index3.html  index5.html
blog/2019/: index.html
blog/2020/: index.html
blog/2021/: index.html
category/: index.html
category/anchor/: index.html
category/cat/: index.html
category/coding/: index.html
category/dns/: index.html
category/fml/: index.html
category/gcp/: index.html
category/leetcode/: index.html  index2.html
category/linux/: index.html
category/machine-learning/: index.html
category/misc/: index.html
category/pelican/: index.html
category/python/: index.html
category/pytorch/: index.html
category/reading/: index.html
category/xgboost/: index.html
content/: 26th-by-sea.md  Categorical-Feature-Encoding-Challenge.md  from-decision-tree-to-catboost.md  jupyter-remote.md  misc-about-cluster.md  misc-about-cname-and-txt-record.md  misc-about-decision-tree.md  misc-about-feature-eng.md  misc-about-git.md  misc-about-kaggle.md  misc-about-xgboost.md  template copy.md  template.md
drafts/: 2020-like-a-river-flowing-aimlessly.html  MSAttn-in-Deformable-DETR.html  my-super-post.html  stanford-cs106l-standard-c-programming.html
gallery/: index.html
images/: what.jfif
output/: 404.html  About.html  about.html  index.html
(+489 files in other folders)
