[tool.poetry]
name = "steermomo-github-io"
version = "0.1.0"
description = ""
authors = ["steermomo <10905619+steermomo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "steermomo"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
Jinja2 = "^3.1.2"
Pillow = "^9.3.0"
pelican = {extras = ["markdown"], version = "^4.8.0"}
lxml = "^4.9.1"
click = "^8.1.3"
ipython = "^8.5.0"
pilkit = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
