[tool.poetry]
name = "steermomo-github-io"
version = "0.1.0"
description = ""
authors = ["steermomo <10905619+steermomo@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "steermomo"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
Jinja2 = "^3.1.2"
Pillow = "^10.0.1"
pelican = {extras = ["markdown"], version = "^4.8.0"}
lxml = "^4.9.1"
click = "^8.1.3"
ipython = "^8.5.0"
pilkit = "^2.0"
asttokens = "^2.2.1"
blinker = "^1.6.2"
docutils = "^0.20.1"
executing = "^1.2.0"
feedgenerator = "^2.1.0"
jedi = "^0.18.2"
markdown = "^3.4.3"
markupsafe = "^2.1.3"
prompt-toolkit = "^3.0.38"
pygments = "^2.15.1"
pytz = "^2023.3"
rich = "^13.4.2"
soupsieve = "^2.4.1"
stack-data = "^0.6.2"
traitlets = "^5.9.0"
unidecode = "^1.3.6"
wcwidth = "^0.2.6"
black = "^23.7.0"
isort = "^5.12.0"
typogrify = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
